--- a/app/views/eventList.scala.html
+++ b/app/views/eventList.scala.html
@@ -4,18 +4,12 @@
     <li id="@event.id" class="event-item">
         <div>
             <h2>@event.name</h2>
-            <span class="start-datetime">@event.startDateTime</span> - <span class="start-datetime">@event.endDateTime</span>
+            <span class="start-datetime">@event.startDateTime</span> - <span class="end-datetime">@event.endDateTime</span>
             <span class="category">@event.category</span>
             <p>@event.description</p>
         </div>
     </li>
 }
-
-<form action="/event" method="POST">
-    <input name="name" type="text" placeholder="name"/>
-    <input name="description" type="text" placeholder="description"/>
-    <input type="submit"/>
-</form>
 
 <ul class="events-list">
     @for(event <- events) {
