--- a/app/views/createEventForm.scala.html
+++ b/app/views/createEventForm.scala.html
@@ -5,7 +5,7 @@
 @main("CoordCMS") {
     @*Temporarily we don't care about security*@
     @*CSRF(routes.HomeController.createEvent())*@
-    @form(routes.HomeController.createEvent(), 'class -> "panel panel-default") {
+    @form(routes.EventFormController.createEvent(), 'class -> "panel panel-default") {
         <div class="panel-heading"><h2>Create new sweet event</h2></div>
         <fieldset class="panel-body">
             @inputText(eventForm("name"), '_label -> "Name", 'class -> "form-control")
