Add some missing read queries

--- a/app/views/eventList.scala.html
+++ b/app/views/eventList.scala.html
@@ -12,7 +12,7 @@
 }
 
 <ul class="events-list list-group">
-    @for(event <- events) {
+    @for(event <- events.sortBy(_.name)) {
         @listItem(event)
     }
 </ul>
