--- a/app/views/eventPagesForm.scala.html
+++ b/app/views/eventPagesForm.scala.html
@@ -1,1 +1,7 @@
-@()
+@()(implicit request: RequestHeader, messages: Messages, webJarAssets: WebJarAssets)
+
+@import helper._
+
+@main("CoordCMS") {
+    <h2>Event Pages</h2>
+}
