EventFormController add updateEvent method HomeController rename showEventForm and add showUpdateEventForm update change signature in BaseDAO and inherited classes Remove bug with date in createEventForm and add upadteEventForm view.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -7,7 +7,7 @@
 
     <div class="row">
         <div class="col-sm-2 col-sm-push-10 col-xs-12">
-            <a class="btn btn-default btn-new-event" href="@controllers.routes.HomeController.showEventForm()">New event</a>
+            <a class="btn btn-default btn-new-event" href="@controllers.routes.HomeController.showNewEventForm()">New event</a>
         </div>
         <div class="col-sm-10 col-sm-pull-2 col-xs-12">
             @eventList(events)
