--- a/app/views/showEventDetail.scala.html
+++ b/app/views/showEventDetail.scala.html
@@ -12,6 +12,16 @@
 
     <div class="row">
         <div class="col-xs-2">
+            <a href="@routes.EventPagesController.showEventPagesForm(event.id.get)">
+                <input class="btn btn-default" value="Add event's page" type="submit">
+            </a>
+        </div>
+        <div class="col-xs-2">
+            <a href="@routes.EventPagesController.showEventPagesForm(event.id.get)">
+                <input class="btn btn-default" value="Update event's page" type="submit">
+            </a>
+        </div>
+        <div class="col-xs-2">
             <a href="@routes.HomeController.showUpdateEventForm(event.id.get)">
                 <input class="btn btn-warning" value="Update event" type="submit">
             </a>
